--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,31 @@
 nav {
     width: 100vw;
-    background-color: #00a3cc;
+    background-color: #b9d5db;
     padding: 1vw;
 }
 
 
 nav a:hover {
-    background-color: rgb(170, 226, 188);
+    background-color: whitesmoke;
 }
 
+img {
+    display: block;
+    width: 25%;
+    margin: 10px;
+}
 
+.main {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+}
 
 .background {
-    background-color: rgb(196, 202, 204);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: medium;
+    background-color: rgb(238, 238, 238);
 }
 
 .column {
@@ -40,19 +53,19 @@ nav ul {
 nav li {
     display: inline;
     margin: 15px;
-    font-size: 2.5vh;
+    font-size: 2vh;
 }
 
 
 nav a {
     color: black;
     padding: 1vw;
-    font-family: monospace;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
 .active {
-    background-color: rgb(69, 71, 71);
+    background-color: rgb(186, 194, 194);
 }
 
 
