--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ nav a:focus {
     background-color: antiquewhite;
 }
 
+.indent {
+    margin-left: 25px;
+}
+
 img {
     display: block;
     width: 90%;
