--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,9 @@ nav a {
 }
 
 .article {
-    margin: 10px 10px 10px 25px;
+    margin-left: 5%;
+    margin-right: 5%;
+    width: auto;
 }
 
 .paragraph {
